# nixpkgs-fod-reports

./: Cargo.toml  flake.nix  readme.md
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci.yml  flake.yml
src/: main.rs
